--- a/assets/json/apps.json
+++ b/assets/json/apps.json
@@ -1,6 +1,6 @@
 [
   {
-    "link": "https://forms.gle/vEp7zbssz8BEkJ8v6",
+    "link": "https://docs.google.com/forms/d/e/1FAIpQLSfwbzjCxFTm1_rVIG3h-UNDq4I4sKIs2_xQoFE93h_y8uxjaw/viewform?usp=dialog",
     "imgSrc": "https://games.above.gay/!img/appreq.png",
     "title": "! Request an App"
   },
